New support: create ticket from admin side

--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -91,6 +91,12 @@
                     .cp-support-message-data {
                         display: none;
                         cursor: default;
+                        position: relative;
+                        .cp-support-copydata {
+                            position: absolute;
+                            right: 0;
+                            margin-right: 0px;
+                        }
                     }
                 }
                 .cp-support-message-time {
