Add more panels until support

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -124,7 +124,10 @@
                         margin-bottom: 0;
                         margin-top: 0.5rem;
                     }
-                
+                    .button.btn.primary.cp-report{
+                        margin-left: 10px; 
+                        cursor: pointer;
+                    }
                 }
 
                 .cp-sidebarlayout-description {
