Add working disk-usage and getlimits

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -124,6 +124,11 @@
                         margin-bottom: 0;
                         margin-top: 0.5rem;
                     }
+                    th{
+                        max-width: 60vw;
+                        border: 1px solid #777;
+                        padding: 5px;
+                    }
                     .button.btn.primary.cp-report{
                         margin-left: 10px; 
                         cursor: pointer;
