New support: pre-recorded messages

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -128,6 +128,11 @@
                         margin-left: 10px; 
                         cursor: pointer;
                     }
+                    .cp-sidebar-list {
+                        pre {
+                            margin: 0;
+                        }
+                    }
                 }
 
                 .cp-sidebarlayout-description {
