New support: responsiveness

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -8,7 +8,7 @@
 @import (reference) "/customize/src/less2/include/leftside-menu.less";
 @import (reference) "/customize/src/less2/include/browser.less";
 
-@sidebar_button-width: 400px;
+@sidebar_button-width: 25rem;;
 
 .sidebar-layout_main() {
     --LessLoader_require: LessLoader_currentFile();
