--- a/www/moderation/app-moderation.less
+++ b/www/moderation/app-moderation.less
@@ -78,5 +78,10 @@
             }
         }
     }
+    .cp-support-search-container {
+        display: flex;
+        flex-flow: column;
+
+    }
 }
 
