--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -205,6 +205,9 @@
             }
             button.btn {
                 margin: 0 0.5rem 0 0;
+                &:last-child {
+                    margin-right: 0;
+                }
             }
             span.cp-password-container {
                 margin-bottom: 1rem;
