Dropdown accessibility: handle submenus and other fixes

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -1038,6 +1038,13 @@
                 align-items: center;
             }
         }
+        .cp-dropdown-container {
+            button {
+                .cp-icon {
+                    margin-left: 5px;
+                }
+            }
+        }
     }
 
     .cp-app-drive-button {
