Dropdown accessibility: fix small screen issues & keyboard

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -48,11 +48,13 @@
         position: relative;
         display: inline-block;
 
-        &.cp-dropdown-recursive {
-            position: unset;
-            .cp-dropdown-content {
-                top: 0;
-                left: 100%;
+        // If a menu is displayed "left", pour the submenus on the left too
+        .cp-dropdown-left {
+            .cp-dropdown-submenu {
+                .cp-dropdown-content {
+                    left: unset;
+                    right: 100%;
+                }
             }
         }
 
@@ -69,6 +71,16 @@
             }
         }
 
+        .cp-dropdown-left {
+            .cp-dropdown-content {
+                right: 0;
+                margin-right: 5px;
+                &.cp-dropdown-submenu {
+                    left: unset;
+                    right: 250px;
+                }
+            }
+        }
         .cp-dropdown-content {
             list-style-type: none;
             display: none;
@@ -84,13 +96,8 @@
             font: @dropdown_font;
             line-height: 1em;
 
-            &.cp-dropdown-has-submenu {
-                overflow: visible;
-            }
-
-            &.cp-dropdown-left {
-                right: 0;
-                margin-right: 5px;
+            &.cp-dropdown-submenu {
+                left: 250px;
             }
 
             &:hover {
