Fix functionalities for refactored panels

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -115,7 +115,10 @@
                     }
                     nav {
                         display: flex;
-                        margin-top: 0.5rem;
+                        align-items: baseline;
+                        .btn.btn-primary {
+                            margin: 5px 0.5rem 0 0;
+                        }
                     }
                     .cp-sidebar-bigger-alert {
                             font-size: 16px;
@@ -134,7 +137,6 @@
                         cursor: pointer;
                     }
                 }
-
                 .cp-sidebarlayout-description {
                     display: block;
                     color: @cp_sidebar-hint;
