Implement review fixes

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -130,7 +130,10 @@
                     th{
                         max-width: 60vw;
                         border: 1px solid #777;
-                        padding: 5px;
+                        padding: 7px;
+                    }
+                    td{
+                        padding: 2px;
                     }
                     .button.btn.primary.cp-report{
                         margin-left: 10px; 
