Fix database functionality and create radio broadcast element

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -135,6 +135,21 @@
                     td{
                         padding: 2px;
                     }
+                    .cp-checkmark{
+                        padding: 0.5rem;
+                    }
+                    .cp-broadcast-container{
+                        display: flex;
+                        flex-flow: column;
+                    }
+                    .cp-broadcast-lang{
+                        order: 4;
+                        margin: 30px;
+                        margin-bottom: 0;
+                        display: flex;
+                        flex-flow: column;
+                        align-items: baseline;
+                    }
                     .button.btn.primary.cp-report{
                         margin-left: 10px; 
                         cursor: pointer;
