Fix minor issue wiht admin refactoring

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -154,6 +154,11 @@
                         margin-left: 10px; 
                         cursor: pointer;
                     }
+                    table {
+                        .cp-strong {
+                            font-weight: bold;
+                        }
+                    }
                 }
                 .cp-sidebarlayout-description {
                     display: block;
