Fix file menu displayed on every app

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -955,6 +955,11 @@
         &:empty {
             height: 0;
         }
+
+        & > div:empty {
+            display: none;
+        }
+
         .cp-toolbar-users {
             pre {
                 /* needed for ckeditor */
