Add additional styling

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -133,7 +133,8 @@
                         padding: 7px;
                     }
                     td {
-                        padding: 2px;
+                        padding: 0.3rem;
+                        margin-right: 2px;
                     }
                     .cp-checkmark {
                         padding: 0.5rem;
@@ -154,6 +155,9 @@
                         .cp-strong {
                             font-weight: bold;
                         }
+                    }
+                    li.cp-notification{
+                        display: none;
                     }
                 }
                 .cp-sidebarlayout-description {
