add icon to Theme submenus

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -98,6 +98,7 @@
 
             &.cp-dropdown-submenu {
                 left: 250px;
+                top: 100px;
             }
 
             &:hover {
