--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -151,6 +151,10 @@
                         flex-flow: column;
                         align-items: baseline;
                     }
+                    a {
+                        color: @cryptpad_color_link;
+                        text-decoration: underline;
+                    }
                     table {
                         .cp-strong {
                             font-weight: bold;
