--- a/customize.dist/src/less2/pages/page-index.less
+++ b/customize.dist/src/less2/pages/page-index.less
@@ -61,6 +61,9 @@
         @media screen and (max-width: 990px) {
             justify-content: center;
         }
+        img {
+            max-height: ~"max(40vh, 250px)";
+        }
     }
     .cp-title {
         display: flex;
