--- a/customize.dist/src/less2/include/loading.less
+++ b/customize.dist/src/less2/include/loading.less
@@ -75,7 +75,8 @@
         margin-left: auto;
         margin-right: auto;
         max-width: 90vw;
-        max-height: 300px;
+        max-height: ~"max(40vh, 250px)";
+        //max-height: 300px;
         width: auto;
         height: auto;
         margin-bottom: 2em;
