--- a/customize.dist/src/pre-loading.css
+++ b/customize.dist/src/pre-loading.css
@@ -72,7 +72,7 @@ html:not(.cp-app-noscroll) #placeholder.dark-theme {
     margin-left: auto;
     margin-right: auto;
     max-width: 90vw;
-    max-height: 300px;
+    max-height: max(40vh, 250px);
     width: auto;
     height: auto;
     margin-bottom: 2em;
