--- a/www/newadmin/app-admin.less
+++ b/www/newadmin/app-admin.less
@@ -19,5 +19,12 @@
     display: flex;
     flex-flow: column;
     font: @colortheme_app-font;
+
+    .cp-admin-color-current {
+        width: 30px;
+        height: 30px;
+        border-radius: 5px;
+        background: @cryptpad_color_brand;
+    }
 }
 
