change size of submenus

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -98,6 +98,10 @@
 
             &.cp-dropdown-submenu {
                 left: 250px;
+                top: 130px;
+            }
+
+            &.cp-dropdown-submenu:nth-last-of-type(1){
                 top: 100px;
             }
 
