Apply box-sizing property to avoid bootstrap requirement

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -24,6 +24,9 @@
         display: flex;
         flex: 1;
         min-height: 0;
+        * {
+            box-sizing: border-box;
+        }
         @media(min-width:800px) {
             #cp-sidebarlayout-leftside {
                 overflow-y: scroll;
