Apply style rules for admin/customize section

--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -72,7 +72,7 @@
     }
 
     textarea, div.cp-textarea {
-        padding: 8px;
+        padding: 8px @alertify_padding-base;
         &[readonly] {
             overflow: hidden;
             resize: none;
