--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -18,7 +18,7 @@
             margin-bottom: 10px;
         }
         [type="text"] {
-            width: @sidebar_button-width;
+            width: @sidebar_block-width;
             margin-bottom: 10px;
         }
         hr {
@@ -26,8 +26,8 @@
         }
         textarea {
             box-sizing: border-box;
-            width: 2*@sidebar_button-width;
-            max-width: 100%;
+            width: 2*@sidebar_block-width !important;
+            max-width: 100% !important;
             padding: 10px 15px;
             height: 300px;
         }
