--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -59,7 +59,7 @@
                     display: inline;
                 }
                 button.btn {
-                    width: @sidebar_button-width;
+                    width: @sidebar_block-width;
                     max-width: 100%;
                     margin: 0 !important;
                 }
@@ -85,7 +85,7 @@
             }
             .cp-settings-info-block {
                 [type="text"] {
-                    width: @sidebar_button-width;
+                    width: @sidebar_block-width;
                     max-width: 100%;
                 }
             }
@@ -105,7 +105,7 @@
                     margin-top:0.5rem;
                 }
                 [type="password"], [type="text"] {
-                    //width: @sidebar_button-width;
+                    //width: @sidebar_block-width;
                     flex: unset;
                 }
                 button {
