--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -19,5 +19,18 @@
     display: flex;
     flex-flow: column;
     font: @colortheme_app-font;
+
+    .cp-admin-customize-logo {
+        padding: 1em;
+        img {
+            max-height: 250px;
+        }
+    }
+    .cp-admin-color-current {
+        width: 20px;
+        height: 20px;
+        border-radius: 5px;
+        background-color: @cryptpad_color_brand;
+    }
 }
 
