--- a/www/moderation/app-moderation.less
+++ b/www/moderation/app-moderation.less
@@ -56,11 +56,7 @@
         display: flex;
         align-items: center;
         max-width: 100%;
-        width: 2*@sidebar_button-width;
-        input {
-            //width: @sidebar_button-width !important;
-            //max-width: @sidebar_button-width;
-        }
+        width: 2*@sidebar_block-width;
         textarea {
             margin: 0;
             height: 5rem;
