Support: UI fixes

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -96,6 +96,10 @@
                     color: @cryptpad_text_col;
                 }
 
+                &.cp-sidebar-force-hide {
+                    display: none !important;
+                }
+
                 &:not([data-item]) { // Old sidebar-layout blocks
                     label:not(.noTitle), .cp-default-label {
                         display: block;
