Fix UI issues in moderation app

--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -130,6 +130,7 @@
         text-align: center;
         text-transform: uppercase;
         font-size: 14px;
+        font-family: inherit;
         text-decoration: none;
         cursor: pointer;
         border-radius: @variables_radius;
